--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -154,25 +154,15 @@
     padding: 10px;
 }
 
-.sos-wrap thead th.data-title {
+.align-left{
     text-align: left;
+}
+.normal-text{
+    text-transform: none;
+}
+
+.sos-wrap thead th.left-10 {
     padding-left: 10px;
-}
-.sos-wrap thead th.data-categories {
-    text-align: left;
-    padding-left: 10px;
-}
-.sos-wrap tbody td.data-title {
-    text-transform: none;
-    text-align: left;
-}
-.sos-wrap tbody td.data-categories {
-    text-transform: none;
-    text-align: left;
-}
-.sos-wrap tbody td.data-trigger {
-    text-transform: none;
-    text-align: left;
 }
 .sos-wrap tbody td.data-trigger b{
     text-transform: none;
@@ -242,12 +232,22 @@
     /*padding: 0!important;*/
 }
 
-.quantity #all_elements{
-    font-weight: 700;
-}
-.quantity *{
+
+
+.quantity #all_elements,
+.quantity #trash_elements{
     cursor: pointer;
 }
+.quantity #all_elements.filtered,
+.quantity #trash_elements.filtered{
+    font-weight: 700;
+}
+
+#the-list > .filtered_out__date,
+#the-list > .filtered_out__status{
+    display: none;
+}
+
 
 .sos-wrap .content-filter .header{
     margin-bottom: 5px;
