--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -842,6 +842,7 @@ input[type="text"].additional_endpoint{
 .sos-wrap .content-filter .header.attribute-plugin{
     justify-content: center;
     background-color: #369451;
+    background-color: #888;
 }
 
 .groups-names{
