--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -232,6 +232,11 @@
     margin-left: 25%;
     height: 50px;
 }
+.sos-wrap button#save_category{
+    width: 50%;
+    margin-left: 25%;
+    height: 50px;
+}
 
 .sos-wrap .pluse {
     display: inline-block;
