--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -59,10 +59,22 @@
     /*margin-right: 5%;*/
 }
 
-.wrapper-filter {
-    padding: 2%;
+#main_title{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
 }
-
+#main_title h1{
+    padding: 0;
+    margin: 0;
+    margin-right: 10px;
+    line-height: 36px;
+}
+#main_title h2{
+    padding: 0;
+    margin: 0;
+    line-height: 30px;
+}
 
 #result{
     display: none;
