--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -727,6 +727,7 @@ select[name="block_plugins"], select[name="block_group_plugins"], select[name="p
     margin-bottom: 5px;
     background-color: #ffffff;
     background-color: rgba(198, 185, 205, 0.1);
+    background-color: rgba(198, 255, 205, 0.5);
     text-align: left;
     display: flex;
     align-items: center;
