--- a/admin/css/po-admin-public.css
+++ b/admin/css/po-admin-public.css
@@ -1,3 +1,11 @@
+body.po_is_blocking_plugins ul#adminmenu{
+    display: none;
+}
+body.po_is_blocking_plugins ul#adminmenu .wp-menu-image img{
+    /* width: 20px; */
+    /* height: 20px; */
+}
+
 .sos-icon:before {
     font-family: "dashicons";
     content: "\f468";
