--- a/admin/css/po-admin-public.css
+++ b/admin/css/po-admin-public.css
@@ -1,7 +1,12 @@
-#toplevel_page_plugin_optimizer ul li:nth-child(9),
-#toplevel_page_plugin_optimizer ul li:nth-child(7),
-#toplevel_page_plugin_optimizer ul li:nth-child(5),
-#toplevel_page_plugin_optimizer ul li:nth-child(3){
+/* #toplevel_page_plugin_optimizer ul li:nth-child(9), */
+/* #toplevel_page_plugin_optimizer ul li:nth-child(7), */
+/* #toplevel_page_plugin_optimizer ul li:nth-child(5), */
+/* #toplevel_page_plugin_optimizer ul li:nth-child(3){ */
+    /* border-top: 1px dashed gray; */
+/* } */
+#toplevel_page_plugin_optimizer ul li:nth-child(8),
+#toplevel_page_plugin_optimizer ul li:nth-child(6),
+#toplevel_page_plugin_optimizer ul li:nth-child(4){
     border-top: 1px dashed gray;
 }
 #adminmenu #toplevel_page_plugin_optimizer ul li{
