--- a/admin/css/po-admin-public.css
+++ b/admin/css/po-admin-public.css
@@ -1,3 +1,54 @@
+body{
+    margin: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    /* font-size: 1rem; */
+    /* font-weight: 400; */
+    /* line-height: 1.5; */
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+}
+
+#wpbody .col-12{ width: 100%; }
+#wpbody .col-9{  width:  75%; }
+#wpbody .col-6{  width:  50%; }
+#wpbody .col-3{  width:  25%; }
+#wpbody .col-2{  width:  16%; }
+
+#wpbody .col-12,
+#wpbody .col-9,
+#wpbody .col-6,
+#wpbody .col-3,
+#wpbody .col-2{
+    position: relative;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+#wpbody .row{
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+#wpbody .justify-content-between{
+    display: flex;
+    justify-content: space-between;
+}
+
+#wpbody .align-items-center{
+    display: flex;
+    align-items: center;
+}
+
+#wpbody button{
+    font-size: 16px;
+}
+
+
 /* #toplevel_page_plugin_optimizer ul li:nth-child(9), */
 /* #toplevel_page_plugin_optimizer ul li:nth-child(7), */
 /* #toplevel_page_plugin_optimizer ul li:nth-child(5), */
