Post types on Edit Filter screen are now Ajax loaded (not filtered)

--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -983,8 +983,9 @@ input[type="text"].additional_endpoint{
 }
 
 
-#set_type{
+#set_filter_type{
     width: 100%;
+    display: none;
 }
 
 #content_type{
