--- a/admin/css/po-admin-public.css
+++ b/admin/css/po-admin-public.css
@@ -89,15 +89,26 @@ body.po_is_recreating_menu #po_please_wait_message{
     position: absolute;
     top: calc( 50% - 50px );
     left: calc( 50% - 150px );
+    box-sizing: border-box;
     width: 300px;
     height: 100px;
     display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
     justify-content: center;
-    align-items: center;
     border: 3px solid #369451;
     border-radius: 3px;
     background-color: #fff;
     text-align: center;
+    padding-left: 100px;
+    background-image: url('../../assets/icon-128x128.png');
+    background-size: 60px auto;
+    background-repeat: no-repeat;
+    background-position: 20px center;
+}
+body.po_is_recreating_menu #po_please_wait_message b{
+    font-size: 16px;
+    margin-bottom: 6px;
 }
 
 
