--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -66,7 +66,12 @@
     padding: 0;
     margin: 0;
     margin-right: 10px;
+    padding-left: 40px;
     line-height: 36px;
+    background-image: url('../../assets/icon-128x128.png');
+    background-size: 30px auto;
+    background-repeat: no-repeat;
+    background-position: left 4px;
 }
 #main_title h2{
     padding: 0;
