Better loading of post types on Edit Filter screen

--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -797,7 +797,7 @@ select[name="block_plugins"], select[name="block_group_plugins"], select[name="p
     background: none;
 }
 #edit_filter #endpoints_wrapper{
-    /* display: none; */
+    display: none;
     flex-flow: row wrap;
 }
 
