--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -926,6 +926,7 @@ input[type="text"].additional_endpoint{
     font-size: 20px;
     text-transform: uppercase;
     margin: 15px;
+    margin-bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -937,31 +938,27 @@ input[type="text"].additional_endpoint{
     align-items: center;
 }
 
-.info-passage.done:before{
-    content: '\2713';
-    /*content: '✔';*/
-    display: block;
-    width: 30px;
-    height: 30px;
-    color: #fff;
-    background-color: #489948;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
 .info-passage:before{
     content: '\2715';
     display: block;
     width: 30px;
     height: 30px;
     font-size: 20px;
+    line-height: 28px;
     color: #fff;
     background-color: #5f5e5e;
     border-radius: 50%;
     margin-right: 10px;
     text-align: center;
 }
+.info-passage.done:before{
+    content: '\2713';
+    background-color: #489948;
+}
 
+.tab .trigger{
+    user-select: none;
+}
 .trigger_closed:before{
     content: '▼';
     color: #72777c;
@@ -975,8 +972,7 @@ input[type="text"].additional_endpoint{
 }
 
 .hidden-info_overview{
-    padding: 5px;
-    margin-top: -10px !important;
+    margin: 0 15px;
 }
 
 .hidden-info_overview.opened{
