responsive YT video wrapper

--- a/admin/css/po-admin.css
+++ b/admin/css/po-admin.css
@@ -1,4 +1,21 @@
 
+.yt_video_wrapper{
+    padding-bottom: calc(var(--aspect-ratio, .5625) * 100%);
+    position: relative;
+    height: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.yt_video_wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 #categories_table .cat_checkbox{
     width: 40px;
     min-width: 40px;
